--- a/package.json
+++ b/package.json
@@ -20,6 +20,20 @@
     "@angular/router": "^17.0.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "@syncfusion/ej2-angular-base": "^26.2.5",
+    "@syncfusion/ej2-angular-buttons": "^26.2.5",
+    "@syncfusion/ej2-angular-calendars": "^26.2.5",
+    "@syncfusion/ej2-angular-dropdowns": "^26.2.5",
+    "@syncfusion/ej2-angular-grids": "^26.2.5",
+    "@syncfusion/ej2-angular-inputs": "^26.2.5",
+    "@syncfusion/ej2-angular-navigations": "^26.2.5",
+    "@syncfusion/ej2-angular-popups": "^26.2.5",
+    "@syncfusion/ej2-angular-schedule": "^26.2.5",
+    "@syncfusion/ej2-angular-splitbuttons": "^26.2.5",
+    "@syncfusion/ej2-material-dark-theme": "^26.2.5",
+    "@syncfusion/ej2-material-theme": "^26.2.5",
+    "@syncfusion/ej2-tailwind-dark-theme": "^26.2.5",
+    "@syncfusion/ej2-tailwind-theme": "^26.2.5",
     "bootstrap": "^5.3.2",
     "primeng": "^17.0.0",
     "rxjs": "~7.8.0",
