--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@syncfusion/ej2-material-theme": "^26.2.5",
     "@syncfusion/ej2-tailwind-dark-theme": "^26.2.5",
     "@syncfusion/ej2-tailwind-theme": "^26.2.5",
+    "@types/node": "^22.1.0",
     "bootstrap": "^5.3.2",
+    "postchain-client": "^1.17.0",
     "primeng": "^17.0.0",
+    "readline": "^1.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -45,6 +48,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@angular/localize": "^17.0.0",
+    "@types/bn.js": "^5.1.5",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "~5.1.0",
