--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "5mb",
-                  "maximumError": "5kb"
+                  "maximumError": "5mb"
                 }
               ],
               "outputHashing": "all"
